# tbxcmake

./: .gitignore  .pre-commit-config.yaml  BuildDeps.yaml  CMakeLists.txt  DEPS.txt  REQUIREMENTS.txt  RootCMakeLists.txt  autogen.yaml  convert_to_cmake.sh  depsToCMake.py  dispatcher.py.template  dispatcher.sh.template  do_autogen.sh  prepare.py  prepare_modules.sh  prepare_singlemodule.py  resolve.py  run_libtbx_refresh.py  setup.cfg  setup.py.template  type_id_eq_h.template  write_libtbx_env.py
Modules/: BoostAdapTBXSizing.cmake  FindDials.cmake  FindEigen3.cmake  FindHDF5Target.cmake  FindNumpy.cmake  FindPCRE.cmake  LibTBXRefresher.cmake  TBXDistribution.cmake
algorithms/: BuildDeps.yaml  CMakeLists.txt
algorithms/background/: BuildDeps.yaml  CMakeLists.txt
algorithms/centroid/: BuildDeps.yaml
algorithms/filtering/: BuildDeps.yaml
algorithms/image/: BuildDeps.yaml
algorithms/image/centroid/: BuildDeps.yaml
algorithms/image/connected_components/: BuildDeps.yaml
algorithms/image/fill_holes/: BuildDeps.yaml
algorithms/image/filter/: BuildDeps.yaml
algorithms/image/threshold/: BuildDeps.yaml
algorithms/indexing/: BuildDeps.yaml
algorithms/integration/: BuildDeps.yaml
algorithms/polygon/: BuildDeps.yaml
algorithms/profile_model/: BuildDeps.yaml
algorithms/refinement/: BuildDeps.yaml
algorithms/rs_mapper/: BuildDeps.yaml
algorithms/scaling/: BuildDeps.yaml
algorithms/shoebox/: BuildDeps.yaml
algorithms/simulation/: BuildDeps.yaml
algorithms/spatial_indexing/: BuildDeps.yaml
algorithms/spot_finding/: BuildDeps.yaml
algorithms/spot_prediction/: BuildDeps.yaml
algorithms/statistics/: BuildDeps.yaml
array_family/: BuildDeps.yaml
autodeps/: AutoBuildDeps.yaml
autodeps/annlib/: AutoBuildDeps.yaml
autodeps/annlib_adaptbx/: AutoBuildDeps.yaml
autodeps/annlib_adaptbx/ann/boost_python/: AutoBuildDeps.yaml
autodeps/cbflib/: AutoBuildDeps.yaml
autodeps/ccp4io/: AutoBuildDeps.yaml
autodeps/ccp4io_adaptbx/: AutoBuildDeps.yaml
autodeps/cctbx_project/: AutoBuildDeps.yaml
autodeps/cctbx_project/boost_adaptbx/: AutoBuildDeps.yaml
autodeps/cctbx_project/boost_adaptbx/graph/: AutoBuildDeps.yaml
autodeps/cctbx_project/boost_adaptbx/tests/: AutoBuildDeps.yaml
autodeps/cctbx_project/cbflib_adaptbx/: AutoBuildDeps.yaml
autodeps/cctbx_project/cbflib_adaptbx/detectors/: AutoBuildDeps.yaml
autodeps/cctbx_project/cctbx/: AutoBuildDeps.yaml
autodeps/cctbx_project/cctbx/adp_restraints/: AutoBuildDeps.yaml
autodeps/cctbx_project/cctbx/boost_python/: AutoBuildDeps.yaml
autodeps/cctbx_project/cctbx/crystal/: AutoBuildDeps.yaml
autodeps/cctbx_project/cctbx/examples/: AutoBuildDeps.yaml
autodeps/cctbx_project/cctbx/geometry_restraints/: AutoBuildDeps.yaml
autodeps/cctbx_project/cctbx/maptbx/: AutoBuildDeps.yaml
autodeps/cctbx_project/cctbx/math/: AutoBuildDeps.yaml
autodeps/cctbx_project/cctbx/merging/: AutoBuildDeps.yaml
autodeps/cctbx_project/cctbx/multipolar/: AutoBuildDeps.yaml
autodeps/cctbx_project/cctbx/sgtbx/: AutoBuildDeps.yaml
autodeps/cctbx_project/cctbx/uctbx/: AutoBuildDeps.yaml
autodeps/cctbx_project/cctbx/xray/: AutoBuildDeps.yaml
autodeps/cctbx_project/chiltbx/: AutoBuildDeps.yaml
autodeps/cctbx_project/dxtbx/: AutoBuildDeps.yaml
autodeps/cctbx_project/dxtbx/boost_python/: AutoBuildDeps.yaml
autodeps/cctbx_project/fable/: AutoBuildDeps.yaml
autodeps/cctbx_project/gltbx/: AutoBuildDeps.yaml
autodeps/cctbx_project/iotbx/: AutoBuildDeps.yaml
autodeps/cctbx_project/iotbx/ccp4_map/: AutoBuildDeps.yaml
autodeps/cctbx_project/iotbx/detectors/: AutoBuildDeps.yaml
autodeps/cctbx_project/iotbx/dsn6/: AutoBuildDeps.yaml
autodeps/cctbx_project/iotbx/mtz/: AutoBuildDeps.yaml
autodeps/cctbx_project/iotbx/pdb/: AutoBuildDeps.yaml
autodeps/cctbx_project/iotbx/shelx/: AutoBuildDeps.yaml
autodeps/cctbx_project/iotbx/xplor/: AutoBuildDeps.yaml
autodeps/cctbx_project/mmtbx/: AutoBuildDeps.yaml
autodeps/cctbx_project/mmtbx/building/: AutoBuildDeps.yaml
autodeps/cctbx_project/mmtbx/bulk_solvent/: AutoBuildDeps.yaml
autodeps/cctbx_project/mmtbx/den/: AutoBuildDeps.yaml
autodeps/cctbx_project/mmtbx/dynamics/: AutoBuildDeps.yaml
autodeps/cctbx_project/mmtbx/f_model/: AutoBuildDeps.yaml
autodeps/cctbx_project/mmtbx/hydrogens/: AutoBuildDeps.yaml
autodeps/cctbx_project/mmtbx/masks/: AutoBuildDeps.yaml
autodeps/cctbx_project/mmtbx/max_lik/: AutoBuildDeps.yaml
autodeps/cctbx_project/mmtbx/ncs/: AutoBuildDeps.yaml
autodeps/cctbx_project/mmtbx/rotamer/: AutoBuildDeps.yaml
autodeps/cctbx_project/mmtbx/rsr/: AutoBuildDeps.yaml
autodeps/cctbx_project/mmtbx/scaling/: AutoBuildDeps.yaml
autodeps/cctbx_project/mmtbx/secondary_structure/: AutoBuildDeps.yaml
autodeps/cctbx_project/mmtbx/tls/: AutoBuildDeps.yaml
autodeps/cctbx_project/mmtbx/utils/: AutoBuildDeps.yaml
autodeps/cctbx_project/omptbx/: AutoBuildDeps.yaml
autodeps/cctbx_project/prime/: AutoBuildDeps.yaml
autodeps/cctbx_project/rstbx/: AutoBuildDeps.yaml
autodeps/cctbx_project/scitbx/: AutoBuildDeps.yaml
autodeps/cctbx_project/simtbx/: AutoBuildDeps.yaml
autodeps/cctbx_project/smtbx/: AutoBuildDeps.yaml
autodeps/cctbx_project/spotfinder/: AutoBuildDeps.yaml
autodeps/cctbx_project/xfel/: AutoBuildDeps.yaml
autodeps/dials/: AutoBuildDeps.yaml
autodeps/dials/algorithms/: AutoBuildDeps.yaml
autodeps/dials/model/: AutoBuildDeps.yaml
autodeps/dials/test/: AutoBuildDeps.yaml
autodeps/xia2/: AutoBuildDeps.yaml
autodeps/xia2/Modules/: AutoBuildDeps.yaml
autogen/: autogen.yaml  depsToCMake.py  resolve.py  testarg.py
autogen/cmake_templates/cbflib/: CMakeLists.txt
cmake/: RootCMakeLists.txt  run_libtbx_refresh.py  type_id_eq_h.template
cmake/Modules/: BoostAdapTBXSizing.cmake  CCP4IOGeneration.cmake  FindEigen3.cmake  LibTBXRefresher.cmake
cmake_templates/cbflib/: CMakeLists.txt
framework/dftbx/: BuildDeps.yaml
model/: BuildDeps.yaml
model/data/: BuildDeps.yaml
model/serialize/: BuildDeps.yaml
nexus/: BuildDeps.yaml
test/: BuildDeps.yaml
util/: BuildDeps.yaml
viewer/: BuildDeps.yaml
(+143 files in other folders)
